// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`p6-tag mode 1`] = `
<p6-tag mode="1">
  <mock:shadow-root>
    <span class="is-warning tag">
      <slot></slot>
    </span>
  </mock:shadow-root>
  Warning
</p6-tag>
`;

exports[`p6-tag renders 1`] = `
<p6-tag>
  <mock:shadow-root>
    <span class="tag">
      <slot></slot>
    </span>
  </mock:shadow-root>
  Tag
</p6-tag>
`;
